<?xml version="1.0"?>
<package format="2">
  <name>time_pub_sub_pkg</name> <!-- TODO: This should match the name of the package -->
  <version>0.0.1</version>
  <description>The time_pub_sub package</description>
  
  <maintainer email="you@example.com">Your Name</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
